# AgroVision

./: .gitignore  AgroVision_Training_Colab.ipynb  README.md  main.py  pyproject.toml
agrovision_core/: __init__.py  pyproject.toml
agrovision_core/src/agrovision_core/: __init__.py
agrovision_core/src/agrovision_core/data/: __init__.py  dataset.py  prepare_dataset.py
agrovision_core/src/agrovision_core/models/: __init__.py  blocks.py  litefieldseg.py  registry.py  unet_baseline.py
agrovision_core/src/agrovision_core/train/: __init__.py  evaluate.py  losses.py  metrics.py  modeling.py  train.py
agrovision_core/src/agrovision_core/utils/: io.py
backend/: __init__.py  main.py
backend/api/: routes.py  schemas.py
backend/services/: inference_service.py
backend/src/: __init__.py
backend/src/data/: dataset.py  prepare_dataset.py
backend/src/models/: __init__.py  unet_baseline.py
backend/src/train/: metrics.py  modeling.py  train.py
backend/src/utils/: __init__.py  io.py
config/: config.yaml
docs/: 02.PROGRESS.md  03.frontend_exploration_notes.md  04.UNET_TRAINING_GUIDE.md  05.Project_Restructure_Report.md  06.findings.md  08.backend_expolation_notes.md  10.MODEL_REGISTRY_GUIDE.md  11.LiteSegNet_explanation.md  API_SCHEMA.md  CHANGELOG.md  PRD.md  PROGRESS.md  UNET_TRAINING_GUIDE.md  field-aware-training.md  frontend_exploration_notes.md  proposal.md
docs/student_a_explanations/: 01_io_utilities.md  02_prepare_dataset.md  03_dataset_class.md  04_config_yaml.md  05_data_pipeline_notebook.md  06_init_files.md  07_design_decisions_and_qa.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  slider.tsx  switch.tsx  table.tsx
frontend/src/lib/: api.ts
notebooks/: data-pipeline.ipynb  data-viz.ipynb  train_and_evaluate.ipynb
outputs/runs/20251225_172543/: config_used.yaml
planning/: STUDENT_B_PLAN.md  STUDENT_C_PLAN.md  STUDENT_D_PLAN.md  Testing_Unet_PLAN.md
