[project]
name = "agrovision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aenum==3.1.16",
    "affine==2.4.0",
    "agrovision-core",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "docstring-parser==0.17.0",
    "einops==0.8.1",
    "executing==2.2.1",
    "filelock==3.20.1",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "geopandas==1.1.2",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.2.3",
    "hydra-core==1.3.2",
    "idna==3.11",
    "importlib-resources==6.5.2",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonargparse==4.44.0",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "kornia==0.8.2",
    "kornia-rs==0.1.10",
    "lightly==1.5.22",
    "lightly-utils==0.0.2",
    "lightning==2.6.0",
    "lightning-utilities==0.15.2",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.4.0",
    "omegaconf==2.3.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyogrio==0.12.1",
    "pyparsing==3.3.1",
    "pyproj==3.7.2",
    "python-dateutil==2.9.0.post0",
    "fastapi==0.115.5",
    "pytorch-lightning==2.6.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rasterio==1.4.4",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "scipy==1.16.3",
    "segmentation-models-pytorch==0.5.0",
    "setuptools==80.9.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "timm==1.0.22",
    "torchgeo==0.8.0",
    "torchmetrics==1.8.2",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer-slim==0.20.1",
    "typeshed-client==2.8.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "wcwidth==0.2.14",
    "yarl==1.22.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "pystac-client>=0.9.0",
    "planetary-computer>=1.0.0",
    "uvicorn==0.30.6",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
agrovision-core = { workspace = true }

torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.workspace]
members = [
    "agrovision_core",
]
