[project]
name = "agrovision-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdo-Eid", email = "65284648+Abdo-Eid@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
